fix: avatars container not showing all avatars

--- a/client/src/styles/pages/home.css
+++ b/client/src/styles/pages/home.css
@@ -271,7 +271,8 @@
     gap: 4px;
     padding: 8px;
     width: 270px;
-    height: 280px;
+    /* height: 280px; */
+    /* height: 500px; */
     z-index: 999;
     border-radius: var(--border-radius);
     top: 0px;
@@ -285,8 +286,10 @@
 
 .avatars-selectable-container > .avatar-selectable,
 .avatars-selectable-container > .avatar-selectable > img {
-    width: calc(300px / 6);
-    height: calc(300px / 6);
+    /* width: calc(300px / 6); */
+    /* height: calc(300px / 6); */
+    width: 50px;
+    height: 50px;
 }
 
 .avatar-selectable {
